--- a/src/config.ini
+++ b/src/config.ini
@@ -3,8 +3,8 @@
 [SYSTEM]
 LOG=wlog.log
 
-[GX808]                 ; Dispenser configuration
+[ML808GX]               ; Dispenser configuration
 PORT=COM0               ; Serial communication port
 
-[SIG_READER]
+[MICROPLOTTER_SIG_DETECTOR]
 PORT=USB0
