fix: remove old files

--- a/src/config.ini
+++ b/src/config.ini
@@ -3,8 +3,9 @@
 [SYSTEM]
 LOG=wlog.log
 
-[ML808GX]               ; Dispenser configuration
-PORT=COM0               ; Serial communication port
+[ML808GX]                           ; Dispenser configuration
+PORT=/dev/ttyUSB0                   ; Serial communication port
+BAUDRATE=115200                     ; Baudrate
 
 [MICROPLOTTER_SIG_DETECTOR]
 PORT=USB0
