feat: add yocto-pwm lib, add event base pwm dector

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,8 +20,8 @@ YOCTO_LIB := ${YOCTO_LIB_PATH}/libyocto-static.a
 
 
 TARGET := dispenserController
-OBJS := main.o ml808gx.o
-DEPS := INIReader.hpp serial.h ml808gx.hpp
+OBJS := main.o ml808gx.o yocto_pwm.o
+DEPS := INIReader.hpp serial.h ml808gx.hpp yocto_pwm.hpp
 LIBS := ${YOCTO_LIB} -lm -lpthread -lusb-1.0
 CFLAGS += -I. -I${YOCTO_API_SRC} 
 
