feat: take pwm reader serial form config/command

--- a/src/config.ini
+++ b/src/config.ini
@@ -8,4 +8,4 @@ PORT=/dev/ttyUSB0                   ; Serial communication port
 BAUDRATE=19200                      ; Baudrate
 
 [MICROPLOTTER_SIG_DETECTOR]
-PORT=USB0
+DEVICE=YPWMRX01-123456
