--- a/src/config.ini
+++ b/src/config.ini
@@ -8,4 +8,4 @@ PORT=/dev/ttyUSB0                   ; Serial communication port
 BAUDRATE=19200                      ; Baudrate
 
 [MICROPLOTTER_SIG_DETECTOR]
-DEVICE=YPWMRX01-1CB2E3
+PIN=6
