--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,7 @@ endif
 TARGET := dispenserController
 OBJS := main.o ml808gx.o signal_detector.o gpio_direct_register_access.o
 DEPS := INIReader.hpp serial.h ml808gx.hpp signal_detector.hpp gpio_direct_register_access.hpp
-LIBS := -lpigpio -lm -lpthread
+LIBS := -lm -lpthread
 CFLAGS += -I. 
 
 
